src/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
@import url(https://fonts.googleapis.com/css?family=Poiret+One);


body, html {
    font-family: "Montserrat", sans-serif;
    color: #4c5e6f;
    /* background-color: #24252A; */
    margin: 0;
    height: 100%;
}

#mainPage {
    text-align: center;
}

#workPage {
    text-align: center;

}

#aboutPage {
    text-align: center;
}

#contactPage {
    text-align: center;
}

#explorePage {
    text-align: center;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

  #wrapper {
      width: 100%;
      height: 100%;
      position: absolute;
      /* background: linear-gradient(45deg, #FF3706, #24AADB , #27DBB1); */
      /* background: linear-gradient(36deg, #79bb9a, #94c2f0, #faded9); */
      background: linear-gradient(35deg, #e0dcce00, #c8d9e765, #bad8f375, #aad6ff6b);
      background-size: 600% 100%;
      animation: gradient 7s linear infinite;
      animation-direction: alternate;
      display: block;
    overflow: auto;
  }


  @keyframes gradient {
      0% {background-position: 0%}
      100% {background-position: 100%}
  }

/* Navigation */
.nav__links li, a, button {
    font-family: "Montserrat", sans-serif;
    font-weight: 500;
    font-size: 16px;
    color: #43646f;
    text-decoration: none;
}

header {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 30px 10%;
}

.logo {
    cursor: default;
    margin-right: auto;
    width: 500px;
    color: #4c5e6f;
}

.logo span {
    color: rgba(121, 182, 214, 0.782);
    transition: all 1s ease 0s;

}

.logo span:hover {
    color: #4c5e6f;
}

.nav__links {
    list-style: none;
}

.nav__links li {
    display: inline-block;
    padding: 0px 20px;
}

.nav__links li a {
    transition: all 0.3s ease 0s;
}

.nav__links li a:hover {
    color: #0000005d;
}

button {
    padding: 9px 25px;
    /* background-color: rgba(0, 136, 169, 1); */
    background-color: rgba(121, 182, 214, 0.782);
    border: none;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3s ease 0s;
}

.cta button:hover {
    background-color: #4c5e6f;
    color: white;
}

#schoolButton button:hover {
    background-color: #4c5e6f;
    color: white;
}

#helloTxt {
    font-size: 50px;
    height: 33vh;
}

#helloTxt span {
    color: rgba(121, 182, 214, 0.782);
    transition: all 0.5s ease 0s;
}

#helloTxt span:hover {
    color: #4c5e6f;
}

#welcomeToPortfolio {
    font-size: 40px;
    text-transform: uppercase;
}

#schoolSite {
    text-decoration: none;
    color: rgba(121, 182, 214, 0.782);
    transition: ease-out 0.5s;
    font-size: 1em;
}

#schoolSite:hover {
    color: #4c5e6f;
}

#inSchool {
    font-size: 60px;
    height: 5vh;
}

#aboutSchool {
}

#mainTxtAbout {
    text-align: center;
    text-transform: uppercase;
}

#workTxtAbout {
    text-align: center;
}

#workTxt {
    font-size: 40px;
    height: 7vh;
}

#aboutTxt {
    font-size: 40px;
    height: 33vh;
}

#aboutMe {
    font-size: 30px;
}

#aboutMePicture {
    width: 500px;
    height: auto; 
    float: right;
    margin-right: 15px;
}

#contactTxt {
    font-size: 40px;
    height: 33vh;
}

#fourBit /* Used in Main Page & Work Page */ {
    color:#FF8C00;
    transition: all 0.5s ease 0s;
    font-size: 30px;
}

#fourBitPhotos {
    margin-right: 100px;
}

#roboticsTitle {
    font-size: 40px;
}

#personalTitle {
    font-size: 40px;
}

#workRobotics {
    font-size: 30px;
}

#aboutRobotics {
    font-size: 25px;
    text-transform: uppercase;
    text-align: center;
    width: 47%;
    margin: auto;
}

#fourBit:hover {
    color: #4c5e6f;
}

#mainFourBitLink {
    font-size: 30px;
}

#workThisWebsite, #workPomodoro, #workCSharp {
    text-decoration: underline;
}


#personal {
    font-size: 60px;
    height: 3vh;
}

#personalWork {
    font-size: 30px;
}

#copyright {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 40px;
    background-color: transparent;
}

.competition {
    font-size: 50px;
}


#name {
    color: rgba(121, 182, 214, 0.782);
    transition: all 0.5s ease 0s;
}

#name:hover {
    color: #4c5e6f;
}

#workPreview {
    font-size: 40px;
}

#calculateButton {
    font-size: 20px;
    border: none;
}

#eightGrade {
    width: auto;
    height: 500px;
}

#ninthGrade {
    width: auto;
    height: 500px;
}

div {
    display: block;
}

li {
    display: list-item;
    list-style-position: inside;
}

